crates/ferrum-interfaces/tests/ui/vnext/fail/allocation_permit_cannot_be_constructed.rs
use ferrum_interfaces::vnext::*;

fn duplicate(permit: DeviceAllocationPermit<'_>) {
    let _ = permit.clone();
}

fn main() {}
